--- a/src/main/resources/ActiveListing.fxml
+++ b/src/main/resources/ActiveListing.fxml
@@ -22,9 +22,9 @@
          <center>
             <Pane prefHeight="200.0" prefWidth="553.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
-                  <JFXButton fx:id="completeRental" buttonType="RAISED" layoutX="218.0" layoutY="46.0" prefHeight="33.0" prefWidth="145.0" style="-fx-background-color: #D1E4F9; -fx-background-radius: 50px;" text="Mark as completed">
+                  <JFXButton fx:id="completeRental" layoutX="219.0" layoutY="122.0" onMouseClicked="#completeListing" prefHeight="46.0" prefWidth="145.0" style="-fx-background-color: #D1E4F9; -fx-background-radius: 50px;" text="Complete &amp; &#10;Submit Feedback" textAlignment="CENTER">
                      <font>
-                        <Font size="14.0" />
+                        <Font size="13.0" />
                      </font>
                   </JFXButton>
                   <Pane layoutX="-1.0" layoutY="194.0" prefHeight="32.0" prefWidth="583.0" style="-fx-background-color: #D1E4F9;">
@@ -36,13 +36,7 @@
                         </Label>
                      </children>
                   </Pane>
-                  <JFXButton fx:id="submitFeedback" buttonType="RAISED" layoutX="423.0" layoutY="135.0" prefHeight="33.0" prefWidth="145.0" style="-fx-background-color: #D1E4F9; -fx-background-radius: 50px;" text="Submit feedback">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </JFXButton>
-                  <TextField fx:id="activeListingField" alignment="CENTER" editable="false" layoutX="24.0" layoutY="10.0" prefHeight="29.0" prefWidth="536.0" />
-                  <TextField fx:id="feedbackText" alignment="CENTER" layoutX="24.0" layoutY="139.0" prefHeight="29.0" prefWidth="382.0" />
+                  <TextField fx:id="activeListingField" alignment="CENTER" editable="false" layoutX="23.0" layoutY="33.0" prefHeight="29.0" prefWidth="536.0" />
                   <Label contentDisplay="CENTER" layoutX="23.0" layoutY="95.0" prefHeight="17.0" prefWidth="123.0" text="Choose your rating:">
                      <font>
                         <Font size="14.0" />
@@ -53,7 +47,8 @@
                   <RadioButton fx:id="rb3" layoutX="265.0" layoutY="97.0" mnemonicParsing="false" text="3" />
                   <RadioButton fx:id="rb4" layoutX="315.0" layoutY="97.0" mnemonicParsing="false" text="4" />
                   <RadioButton fx:id="rb5" layoutX="365.0" layoutY="97.0" mnemonicParsing="false" text="5" />
-                  <Label layoutX="436.0" layoutY="79.0" prefHeight="53.0" prefWidth="118.0" text="1 - Very disappointed&#10;5 - Very satisfied" />
+                  <Label layoutX="436.0" layoutY="79.0" prefHeight="101.0" prefWidth="118.0" text="1 - Very disappointed&#10;2 - Disappointed&#10;3 - Fair&#10;4 - Satisfied&#10;5 - Very satisfied" />
+                  <Text fx:id="completeText" layoutX="2.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="576.13671875" />
                </children>
             </Pane>
          </center>
