--- a/src/main/resources/ClientRegistration.fxml
+++ b/src/main/resources/ClientRegistration.fxml
@@ -10,7 +10,7 @@
 
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ClientRegistrationController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="421.0" style="-fx-background-color: #D1E4F9;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="421.0" style="-fx-background-color: #D1E4F9;" stylesheets="@CSS/text_fieldCSS.css">
            <children>
                <Label alignment="CENTER" layoutX="104.0" layoutY="14.0" text="Client Registration">
                    <font>
@@ -47,7 +47,7 @@
                <TextField fx:id="lastname" layoutX="284.0" layoutY="127.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Mladin" />
                <PasswordField fx:id="password" layoutX="164.0" layoutY="269.0" prefHeight="25.0" prefWidth="219.0" />
                <PasswordField fx:id="confirmPassword" layoutX="164.0" layoutY="382.0" prefHeight="25.0" prefWidth="219.0" />
-               <Label alignment="CENTER" layoutX="195.0" layoutY="302.0" text="*Password must contain at least:&#10;*One upper case letter&#10;*One lower case letter&#10;*A number&#10;*8 characters" textAlignment="CENTER">
+               <Label alignment="CENTER" layoutX="195.0" layoutY="294.0" text="*Password must contain at least:&#10;*One upper case letter&#10;*One lower case letter&#10;*A number&#10;*8 characters" textAlignment="CENTER">
                    <font>
                        <Font size="11.0" />
                    </font>
