--- a/src/main/resources/LegalPersonRegistration.fxml
+++ b/src/main/resources/LegalPersonRegistration.fxml
@@ -10,7 +10,7 @@
 
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.LegalPersonRegistrationController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="563.0" prefWidth="421.0" style="-fx-background-color: #D1E4F9;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="563.0" prefWidth="421.0" style="-fx-background-color: #D1E4F9;" stylesheets="@CSS/text_fieldCSS.css">
          <children>
             <Label alignment="CENTER" layoutX="139.0" layoutY="14.0" text="Legal Person">
                <font>
