--- a/src/main/resources/ChoiceRegistration.fxml
+++ b/src/main/resources/ChoiceRegistration.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<StackPane fx:id="mainChoiceContainer" focusTraversable="true" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ChoiceRegistrationController">
+<StackPane fx:id="mainChoiceContainer" focusTraversable="true" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ChoiceRegistrationController">
    <children>
       <AnchorPane fx:id="choiceContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="224.0" prefWidth="417.0" style="-fx-background-color: #D1E4F9;">
          <children>
@@ -19,7 +16,7 @@
                   <Font name="System Bold" size="25.0" />
                </font>
             </Label>
-            <JFXButton fx:id="goToClientR" buttonType="RAISED" layoutX="56.0" layoutY="161.0" mnemonicParsing="false" onMouseClicked="#switchToClientR" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Client">
+            <JFXButton fx:id="goToClientR" buttonType="RAISED" focusTraversable="false" layoutX="56.0" layoutY="161.0" mnemonicParsing="false" onMouseClicked="#switchToClientR" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Client">
                <font>
                   <Font size="14.0" />
                </font>
@@ -27,7 +24,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXButton>
-            <JFXButton fx:id="goToProviderR" buttonType="RAISED" layoutX="268.0" layoutY="161.0" mnemonicParsing="false" onMouseClicked="#switchToProviderR" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Provider">
+            <JFXButton fx:id="goToProviderR" buttonType="RAISED" focusTraversable="false" layoutX="268.0" layoutY="161.0" mnemonicParsing="false" onMouseClicked="#switchToProviderR" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Provider">
                <font>
                   <Font size="14.0" />
                </font>
@@ -40,7 +37,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Hyperlink fx:id="goBackToLogin" layoutX="1.0" layoutY="197.0" onMouseClicked="#switchBackToLogin" text="&lt;Back" />
+            <Hyperlink fx:id="goBackToLogin" focusTraversable="false" layoutX="1.0" layoutY="197.0" onMouseClicked="#switchBackToLogin" text="&lt;Back" />
             <ImageView fx:id="exit" fitHeight="24.0" fitWidth="22.0" layoutX="395.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Images/exit.png" />
