--- a/src/main/resources/HomeClient.fxml
+++ b/src/main/resources/HomeClient.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ClientMenuController">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" stylesheets="@CSS/focusCSS.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ClientMenuController">
     <children>
         <AnchorPane prefHeight="46.0" prefWidth="200.0" style="-fx-background-color: #002d40;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <children>
@@ -94,27 +91,27 @@
             <children>
                 <VBox layoutY="14.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
                     <children>
-                        <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#home" prefHeight="38.0" prefWidth="179.0" text="Home">
+                        <JFXButton alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#home" prefHeight="38.0" prefWidth="179.0" text="Home">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </JFXButton>
-                        <JFXButton fx:id="cars" alignment="BASELINE_LEFT" onMouseClicked="#cars" prefHeight="38.0" prefWidth="179.0" text="Rent a car">
+                        <JFXButton fx:id="cars" alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#cars" prefHeight="38.0" prefWidth="179.0" text="Rent a car">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#ActiveListing" prefHeight="38.0" prefWidth="179.0" text="Manage Rentals">
+                        <JFXButton alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#ActiveListing" prefHeight="38.0" prefWidth="179.0" text="Manage Rentals">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" onMouseClicked="#ClientProfile" prefHeight="38.0" prefWidth="179.0" text="My Profile">
+                        <JFXButton alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#ClientProfile" prefHeight="38.0" prefWidth="179.0" text="My Profile">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </JFXButton>
-                        <JFXButton fx:id="logOutOfAcc" alignment="BASELINE_LEFT" onMouseClicked="#switchToLogIn" prefHeight="38.0" prefWidth="179.0" text="Log Out">
+                        <JFXButton fx:id="logOutOfAcc" alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#switchToLogIn" prefHeight="38.0" prefWidth="179.0" text="Log Out">
                             <font>
                                 <Font size="16.0" />
                             </font>
