--- a/src/main/resources/IndividualPRegistration.fxml
+++ b/src/main/resources/IndividualPRegistration.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.*?>
+<?import java.net.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
@@ -10,7 +11,7 @@
 
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.IndividualPRegistrationController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="579.0" prefWidth="421.0" style="-fx-background-color: #D1E4F9;" stylesheets="@CSS/text_fieldCSS.css">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="579.0" prefWidth="421.0" style="-fx-background-color: #D1E4F9;">
          <children>
             <Label alignment="CENTER" layoutX="152.0" layoutY="14.0" text="Individual">
                <font>
@@ -59,7 +60,7 @@
                </font>
             </Label>
             <TextField fx:id="phoneNo" layoutX="161.0" layoutY="232.0" prefHeight="25.0" prefWidth="219.0" />
-            <JFXButton fx:id="Submit" buttonType="RAISED" layoutX="161.0" layoutY="532.0" mnemonicParsing="false" onMouseClicked="#sendReg" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Submit">
+            <JFXButton fx:id="Submit" buttonType="RAISED" focusTraversable="false" layoutX="161.0" layoutY="532.0" mnemonicParsing="false" onMouseClicked="#sendReg" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Submit">
                <font>
                   <Font size="15.0" />
                </font>
@@ -92,6 +93,10 @@
                </image>
             </ImageView>
          </children>
+         <stylesheets>
+            <URL value="@CSS/text_fieldCSS.css" />
+            <URL value="@CSS/focusCSS.css" />
+         </stylesheets>
       </AnchorPane>
    </children>
 </StackPane>
