--- a/src/main/resources/NewListing.fxml
+++ b/src/main/resources/NewListing.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.*?>
+<?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -22,33 +23,37 @@
             </Pane>
          </top>
          <center>
-            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" stylesheets="@CSS/text_fieldCSS.css" BorderPane.alignment="CENTER">
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
                   <Label layoutX="38.0" layoutY="42.0" text="Make" />
-                  <TextField fx:id="make" layoutX="77.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="make" focusTraversable="false" layoutX="77.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="223.0" layoutY="269.0" text="Price" />
-                  <JFXButton buttonType="RAISED" layoutX="489.0" layoutY="381.0" onMouseClicked="#addCar" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #D1E4F9; -fx-background-radius: 50;" text="Add" />
-                  <JFXButton fx:id="switchToHome" buttonType="RAISED" layoutX="14.0" layoutY="381.0" onMouseClicked="#home" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #D1E4F9; -fx-background-radius: 50;" text="Cancel" />
+                  <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="489.0" layoutY="381.0" onMouseClicked="#addCar" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #D1E4F9; -fx-background-radius: 50;" text="Add" />
+                  <JFXButton fx:id="switchToHome" buttonType="RAISED" focusTraversable="false" layoutX="14.0" layoutY="381.0" onMouseClicked="#home" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #D1E4F9; -fx-background-radius: 50;" text="Cancel" />
                   <Label layoutX="219.0" layoutY="42.0" text="Model" />
-                  <TextField fx:id="model" layoutX="270.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="model" focusTraversable="false" layoutX="270.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="406.0" layoutY="42.0" text="Year" />
-                  <TextField fx:id="year" layoutX="443.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="year" focusTraversable="false" layoutX="443.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="32.0" layoutY="109.0" text="Mileage" />
-                  <TextField fx:id="mileage" layoutX="77.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="mileage" focusTraversable="false" layoutX="77.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
                   <Label layoutX="200.0" layoutY="109.0" text="Cub. Capacity" />
                   <Label layoutX="407.0" layoutY="109.0" text="Fuel" />
-                  <TextField fx:id="cmc" layoutX="282.0" layoutY="105.0" prefHeight="25.0" prefWidth="69.0" />
-                  <TextField fx:id="fuel" layoutX="443.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
+                  <TextField fx:id="cmc" focusTraversable="false" layoutX="282.0" layoutY="105.0" prefHeight="25.0" prefWidth="69.0" />
+                  <TextField fx:id="fuel" focusTraversable="false" layoutX="443.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
                   <Text fx:id="listingText" layoutX="71.0" layoutY="343.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="439.13671875" />
-                  <TextField fx:id="price" alignment="CENTER" layoutX="257.0" layoutY="265.0" prefHeight="25.0" prefWidth="120.0" promptText="Price per day" />
+                  <TextField fx:id="price" alignment="CENTER" focusTraversable="false" layoutX="257.0" layoutY="265.0" prefHeight="25.0" prefWidth="120.0" promptText="Price per day" />
                   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="191.0" layoutY="357.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@Images/logo_lightblue.PNG" />
                      </image>
                   </ImageView>
                   <Label layoutX="209.0" layoutY="189.0" prefHeight="17.0" prefWidth="55.0" text="No. Plate" />
-                  <TextField fx:id="noPlate" layoutX="272.0" layoutY="185.0" prefHeight="25.0" prefWidth="89.0" promptText="E.g. AR10FIS" />
+                  <TextField fx:id="noPlate" focusTraversable="false" layoutX="272.0" layoutY="185.0" prefHeight="25.0" prefWidth="89.0" promptText="E.g. AR10FIS" />
                </children>
+               <stylesheets>
+                  <URL value="@CSS/text_fieldCSS.css" />
+                  <URL value="@CSS/focusCSS.css" />
+               </stylesheets>
             </Pane>
          </center>
       </BorderPane>
