--- a/src/main/resources/ProviderRegistration.fxml
+++ b/src/main/resources/ProviderRegistration.fxml
@@ -10,7 +10,7 @@
 
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ProviderRegistrationController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="214.0" prefWidth="417.0" style="-fx-background-color: #D1E4F9;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="214.0" prefWidth="417.0" style="-fx-background-color: #D1E4F9;" stylesheets="@CSS/focusCSS.css">
          <children>
             <Label alignment="CENTER" layoutX="88.0" layoutY="14.0" text="Provider Registration">
                <font>
@@ -22,7 +22,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <JFXButton fx:id="goToIndividual" buttonType="RAISED" layoutX="61.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#switchToIndividual" prefHeight="33.0" prefWidth="116.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Individual">
+            <JFXButton fx:id="goToIndividual" buttonType="RAISED" focusTraversable="false" layoutX="61.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#switchToIndividual" prefHeight="33.0" prefWidth="116.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Individual">
                <font>
                   <Font size="15.0" />
                </font>
@@ -47,7 +47,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <JFXButton fx:id="goToLegal" buttonType="RAISED" layoutX="245.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#switchToLegal" prefHeight="33.0" prefWidth="116.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Legal Person">
+            <JFXButton fx:id="goToLegal" buttonType="RAISED" focusTraversable="false" layoutX="245.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#switchToLegal" prefHeight="33.0" prefWidth="116.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Legal Person">
                <font>
                   <Font size="15.0" />
                </font>
