--- a/src/main/resources/cars.fxml
+++ b/src/main/resources/cars.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<StackPane prefHeight="454.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.CarsController">
+<StackPane prefHeight="454.0" prefWidth="583.0" stylesheets="@CSS/focusCSS.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.CarsController">
    <children>
         <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
             <top>
@@ -20,12 +20,12 @@
                 </Pane>
             </top>
          <center>
-            <ListView fx:id="carList" prefHeight="200.0" prefWidth="560.0" BorderPane.alignment="CENTER" />
+            <ListView fx:id="carList" focusTraversable="false" prefHeight="200.0" prefWidth="560.0" BorderPane.alignment="CENTER" />
          </center>
          <right>
             <AnchorPane prefHeight="414.0" prefWidth="155.0" BorderPane.alignment="CENTER">
                <children>
-                  <JFXButton fx:id="rent" buttonType="RAISED" layoutX="4.0" layoutY="195.0" onMouseClicked="#rentACar" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #D1E4F9;" text="Rent it!">
+                  <JFXButton fx:id="rent" buttonType="RAISED" focusTraversable="false" layoutX="4.0" layoutY="195.0" onMouseClicked="#rentACar" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #D1E4F9;" text="Rent it!">
                      <graphic>
                         <TextField fx:id="noPlate" alignment="CENTER" prefHeight="25.0" prefWidth="82.0" promptText="E.g. AR15LLL" style="-fx-background-radius: 50;" />
                      </graphic>
