Added price exception. Price can only be an integer number. The currency for the price is "Euro".

--- a/src/main/resources/NewListing.fxml
+++ b/src/main/resources/NewListing.fxml
@@ -41,7 +41,7 @@
                   <TextField fx:id="cmc" focusTraversable="false" layoutX="282.0" layoutY="105.0" prefHeight="25.0" prefWidth="69.0" />
                   <TextField fx:id="fuel" focusTraversable="false" layoutX="443.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
                   <Text fx:id="listingText" layoutX="71.0" layoutY="343.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="439.13671875" />
-                  <TextField fx:id="price" alignment="CENTER" focusTraversable="false" layoutX="257.0" layoutY="265.0" prefHeight="25.0" prefWidth="120.0" promptText="Price per day" />
+                  <TextField fx:id="price" alignment="CENTER" focusTraversable="false" layoutX="257.0" layoutY="265.0" prefHeight="25.0" prefWidth="120.0" promptText="€/Day" />
                   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="191.0" layoutY="357.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@Images/logo_lightblue.PNG" />
