--- a/src/main/resources/ClientProfile.fxml
+++ b/src/main/resources/ClientProfile.fxml
@@ -62,7 +62,7 @@
                                 <Font size="14.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="completedRentals" editable="false" focusTraversable="false" layoutX="34.0" layoutY="165.0" prefHeight="25.0" prefWidth="86.0" style="-fx-background-radius: 50;" />
+                        <TextField fx:id="completedRentals" alignment="CENTER" editable="false" focusTraversable="false" layoutX="34.0" layoutY="165.0" prefHeight="25.0" prefWidth="86.0" style="-fx-background-radius: 50;" />
                         <JFXButton fx:id="delete" buttonType="RAISED" focusTraversable="false" layoutX="17.0" layoutY="364.0" onMouseClicked="#deleteAccount" prefHeight="33.0" prefWidth="118.0" style="-fx-background-color: #D1E4F9; -fx-background-radius: 50px;" stylesheets="@CSS/focusCSS.css" text="Delete account">
                             <font>
                                 <Font size="14.0" />
@@ -72,7 +72,7 @@
                      <font>
                         <Font size="14.0" />
                      </font></Label>
-                  <TextField fx:id="cnp" editable="false" focusTraversable="false" layoutX="239.0" layoutY="165.0" prefHeight="25.0" prefWidth="167.0" style="-fx-background-radius: 50;" />
+                  <TextField fx:id="cnp" alignment="CENTER" editable="false" focusTraversable="false" layoutX="239.0" layoutY="165.0" prefHeight="25.0" prefWidth="167.0" style="-fx-background-radius: 50;" />
                   <Text fx:id="deleteAccountMessage" fill="RED" layoutX="6.0" layoutY="345.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="140.13671875" />
                     </children>
                 </Pane>
