CLG-91 Verified the entered email, if it exists and if it is valid.

--- a/src/main/resources/ForgotPassword.fxml
+++ b/src/main/resources/ForgotPassword.fxml
@@ -62,7 +62,7 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </JFXButton>
-                <Text fill="#fc0000" layoutX="34.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="231.13671875" />
+            <Text fx:id="forgotMessage" layoutX="30.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="239.13671875" />
             </children>
         </Pane>
     </right>
