--- a/src/main/resources/ChangePassword.fxml
+++ b/src/main/resources/ChangePassword.fxml
@@ -33,7 +33,7 @@
     <right>
         <Pane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: white;" stylesheets="@CSS/text_fieldCSS.css" BorderPane.alignment="CENTER">
             <children>
-                <JFXButton fx:id="change" buttonType="RAISED" focusTraversable="false" layoutX="170.0" layoutY="301.0" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: #0504aa; -fx-background-radius: 50px;" text="CHANGE" textFill="WHITE">
+                <JFXButton fx:id="change" buttonType="RAISED" focusTraversable="false" layoutX="170.0" layoutY="301.0" onMouseClicked="#changePassword" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: #0504aa; -fx-background-radius: 50px;" text="CHANGE" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="14.0" />
                     </font>
@@ -62,9 +62,10 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </JFXButton>
-                <Text fill="#fc0000" layoutX="34.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="231.13671875" />
-            <PasswordField alignment="CENTER" layoutX="63.0" layoutY="157.0" promptText="Enter New Password" />
-            <PasswordField alignment="CENTER" layoutX="63.0" layoutY="215.0" promptText="Confirm New Password" />
+                <Text fx:id="changePassMessage" fill="#fc0000" layoutX="34.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="231.13671875" />
+            <PasswordField fx:id="password" alignment="CENTER" layoutX="63.0" layoutY="157.0" promptText="Enter New Password" />
+            <PasswordField fx:id="confirmPassword" alignment="CENTER" layoutX="63.0" layoutY="215.0" promptText="Confirm New Password" />
+            <Hyperlink fx:id="logInNow" contentDisplay="CENTER" layoutX="116.0" layoutY="351.0" onAction="#goToLogIn" textAlignment="CENTER" />
             </children>
         </Pane>
     </right>
